# racedeck

./: .firebaserc  README.md  firebase.json  firestore.rules  index.d.ts  nuxt.config.js  package-lock.json  package.json  racedeck.code-workspace  tailwind.config.js  tsconfig.json
.github/: dependabot.yml
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
api/: BUILD  WORKSPACE  go.mod  go.sum
api/proto/: BUILD.bazel  common.proto
api/services/ping/: BUILD.bazel
components/tracks/: card.vue
functions/: package-lock.json  package.json
functions/src/: index.ts
layouts/: default.vue
pages/: index.vue
public/: index.html
src/: App.vue  main.ts
src/components/__tests__/: HelloWorld.spec.ts
src/components/tracks/: TrackCard.vue
src/components/ui/: NavigationBar.vue  Notifications.vue
src/components/ui/form/: InputField.vue
src/components/ui/nav/: NavLink.vue  NavUser.vue
src/components/ui/typography/: PageHeading.vue
src/lib/: firebase.ts
src/router/: index.ts
src/stores/: notifications.ts  sims.ts  tracks.ts  user.ts
src/views/: HomeView.vue
src/views/tracks/: NewLayout.vue  NewTrack.vue  Track.vue  Tracks.vue
src/views/user/: Login.vue  Profile.vue
store/: tracks.ts
store/tracks/: actions.js  index.ts
